css/index.css
body {
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: black;
	color: white;
	overflow: none;
	font-family: 'Merriweather', serif;
	font-weight: 300;
}

/*Background */

.background-image {
	position: absolute;
	z-index: -100;
	opacity: 0.6;
	width: 100vw;
	height: 100vh;
}

/* Content wraps everything and resizes based on media width */

.content {
	height: 100vh;
}


/* Heading - The Evernden Cabin */
.heading {
	position: relative;
	text-align: center;
	font-size: 1.5vw;
	font-family: 'Sacramento', sans-serif;
	width: 100%;
	-webkit-transform: translateY(-50vh);
	opacity: 0;

	-webkit-transition: -webkit-transform 0.8s, opacity 1s;
}

.heading h1 {
	margin: 0;
	font-weight: 100;
	margin: 0;
}

.heading h1:hover {
	cursor: pointer;
}

.heading-landing-pos {
	-webkit-transform: translateY(37vh);
	opacity: 1;
}

.heading-nav-pos {
	-webkit-transform: translateY(1vh);
	opacity: 1;
}


/* Custom navigation buttons*/
.button-bar{
	position: relative;
	text-align: center;
	width: 100vw;
	font-size: 1.7vw;
}

.custom-button {
	display: inline-block;
	margin: 0 2vw;
	-webkit-transition: -webkit-transform 0.25s;
}

.custom-button p {
	margin-top: 0;
}

.custom-button:hover{
	cursor: pointer;
	color: #7BACCB;
	-webkit-transform: translateY(-5px);
}

.underline {
	width: 0;
	height: 2px;
	background-color: white;
}

.underline-hover {
	width: 100%;
	-webkit-transition: width 0.2s;
}

/* Loadable content div*/

.nav-content {
	height: 100vh;
	width: 100vw;
	margin-left: auto;
    margin-right: auto;
	background-color: rgba(23, 89, 71, 1); /* #175947 */
	-webkit-transition: -webkit-transform 0.7s;
	-webkit-transform: translateY(100vh);
}

.nav-content-expand {
	-webkit-transform: translateY(0px);
}

